@@ -2,12 +2,14 @@ package com.github.xhiroyui.orinbot.modules.command.administrator;
 
 import com.github.xhiroyui.orinbot.modules.Command;
 import com.github.xhiroyui.orinbot.modules.command.RequiredPermissions;
+import com.github.xhiroyui.orinbot.util.BotUtil;
 import discord4j.core.event.domain.message.MessageCreateEvent;
 import discord4j.core.object.entity.Message;
 import discord4j.core.object.util.Permission;
 import org.springframework.stereotype.Service;
 import reactor.core.publisher.Mono;
 
+import java.util.Collections;
 import java.util.List;
 
 @Service
@@ -16,7 +18,7 @@ public class Pong extends Command {
 	public Pong() {
 		super("Pings you back",
 				1,
-				List.of(),
+				BotUtil.generateCommandDescriptionMap(Collections.emptyList(), Collections.emptyList()),
 				List.of("pong"));
 	}
 
