@@ -3,6 +3,7 @@ package com.github.xhiroyui.orinbot.modules.command.general;
 import com.github.xhiroyui.orinbot.datastore.dao.GuildPrefixRepository;
 import com.github.xhiroyui.orinbot.datastore.entity.GuildPrefix;
 import com.github.xhiroyui.orinbot.modules.Command;
+import com.github.xhiroyui.orinbot.util.BotUtil;
 import discord4j.core.event.domain.message.MessageCreateEvent;
 import discord4j.core.object.entity.Message;
 import org.springframework.beans.factory.annotation.Autowired;
@@ -10,6 +11,7 @@ import org.springframework.data.r2dbc.core.DatabaseClient;
 import org.springframework.stereotype.Service;
 import reactor.core.publisher.Mono;
 
+import java.util.Collections;
 import java.util.List;
 
 @Service
@@ -24,7 +26,7 @@ public class SetPrefix extends Command {
 	public SetPrefix() {
 		super("Updates the prefix for this guild.",
 				1,
-				List.of(),
+				BotUtil.generateCommandDescriptionMap(Collections.emptyList(), Collections.emptyList()),
 				List.of("setprefix"));
 	}
 
